# youtube-summariser

./: .env.example  .gitignore  CHANGELOG.md  LICENSE  Pipfile  README.md  RELEASE_BODY.md  app.py  cli.py  config.yaml  llm_client.py  main.py  pyproject.toml  youtube_helper.py
.github/workflows/: pr-test.yml  release.yml
src/youtube_summariser/: __init__.py  __main__.py  cli.py  config.yaml  config_manager.py  llm_client.py  youtube_helper.py
static/css/: style.css
static/js/: main.js
templates/: index.html
tests/: __init__.py  test_cli_search.py  test_config_manager.py  test_llm_client.py  test_user_config_integration.py  test_youtube_helper.py
